--- a/1_EDA_intro.ipynb
+++ b/1_EDA_intro.ipynb
@@ -141,158 +141,165 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>537672</th>\n",
+       "      <th>766974</th>\n",
        "      <td>Data Analyst</td>\n",
-       "      <td>Data Analyst</td>\n",
-       "      <td>Columbia, SC</td>\n",
-       "      <td>via BeBee</td>\n",
+       "      <td>Data Analyst (Mid)</td>\n",
+       "      <td>St. Louis, MO</td>\n",
+       "      <td>via Dice</td>\n",
        "      <td>Full-time</td>\n",
        "      <td>False</td>\n",
-       "      <td>Georgia</td>\n",
-       "      <td>2023-10-14 20:07:26</td>\n",
-       "      <td>True</td>\n",
+       "      <td>Illinois, United States</td>\n",
+       "      <td>2023-01-19 01:03:18</td>\n",
+       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>United States</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>BTS, LLC</td>\n",
-       "      <td>[r, python, sql]</td>\n",
-       "      <td>{'programming': ['r', 'python', 'sql']}</td>\n",
+       "      <td>Judge Group, Inc.</td>\n",
+       "      <td>[sql, nosql, python, r, tableau]</td>\n",
+       "      <td>{'analyst_tools': ['tableau'], 'programming': ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>436770</th>\n",
+       "      <th>221941</th>\n",
        "      <td>Data Analyst</td>\n",
-       "      <td>Data Analyst-</td>\n",
-       "      <td>San Jose, CA</td>\n",
-       "      <td>via BeBee</td>\n",
-       "      <td>Full-time</td>\n",
-       "      <td>False</td>\n",
-       "      <td>California, United States</td>\n",
-       "      <td>2023-12-13 16:00:56</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>WPP PLC</td>\n",
-       "      <td>[tableau, power bi, excel]</td>\n",
-       "      <td>{'analyst_tools': ['tableau', 'power bi', 'exc...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>774314</th>\n",
        "      <td>Data Analyst</td>\n",
-       "      <td>Analyst, Monitoring &amp; Analytics – Default Solu...</td>\n",
-       "      <td>Lewisville, TX</td>\n",
-       "      <td>via TIAA Careers</td>\n",
+       "      <td>Austin, TX</td>\n",
+       "      <td>via Simplex Career Opportunities - HiringThing</td>\n",
        "      <td>Full-time</td>\n",
        "      <td>False</td>\n",
        "      <td>Texas, United States</td>\n",
-       "      <td>2023-10-05 01:01:51</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>TIAA</td>\n",
-       "      <td>[vba, sql, python, excel, sharepoint, tableau,...</td>\n",
-       "      <td>{'analyst_tools': ['excel', 'sharepoint', 'tab...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>528903</th>\n",
-       "      <td>Data Analyst</td>\n",
-       "      <td>Data Analyst</td>\n",
-       "      <td>Concord, NH</td>\n",
-       "      <td>via BeBee</td>\n",
-       "      <td>Full-time</td>\n",
-       "      <td>False</td>\n",
-       "      <td>New York, United States</td>\n",
-       "      <td>2023-11-19 11:00:17</td>\n",
+       "      <td>2023-05-02 22:02:17</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>United States</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Mindlance</td>\n",
-       "      <td>[sql]</td>\n",
-       "      <td>{'programming': ['sql']}</td>\n",
+       "      <td>Simplex</td>\n",
+       "      <td>[sql, java, t-sql, powershell, mysql, excel]</td>\n",
+       "      <td>{'analyst_tools': ['excel'], 'databases': ['my...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>475406</th>\n",
+       "      <th>469286</th>\n",
        "      <td>Data Analyst</td>\n",
-       "      <td>Elections Data Analyst I</td>\n",
-       "      <td>Atlanta, GA</td>\n",
-       "      <td>via BeBee</td>\n",
-       "      <td>Full-time</td>\n",
+       "      <td>SAS Data Analyst</td>\n",
+       "      <td>McLean, VA</td>\n",
+       "      <td>via Dice</td>\n",
+       "      <td>Contractor</td>\n",
        "      <td>False</td>\n",
-       "      <td>Georgia</td>\n",
-       "      <td>2023-08-26 15:00:27</td>\n",
+       "      <td>New York, United States</td>\n",
+       "      <td>2023-04-05 14:00:12</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>United States</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Team Georgia Careers</td>\n",
-       "      <td>[sql, r, python, mysql, oracle, linux, excel, ...</td>\n",
-       "      <td>{'analyst_tools': ['excel', 'word', 'tableau',...</td>\n",
+       "      <td>Technology Ventures</td>\n",
+       "      <td>[sas, sas, sql, unix, powerpoint]</td>\n",
+       "      <td>{'analyst_tools': ['sas', 'powerpoint'], 'os':...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>539148</th>\n",
+       "      <td>Data Analyst</td>\n",
+       "      <td>Journeyman  Job Posting Title GIS Data Analyst</td>\n",
+       "      <td>Granite City, IL</td>\n",
+       "      <td>via Ozarks First Jobs</td>\n",
+       "      <td>Full-time</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Illinois, United States</td>\n",
+       "      <td>2023-12-11 19:01:39</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LEIDOS</td>\n",
+       "      <td>[sql, python]</td>\n",
+       "      <td>{'programming': ['sql', 'python']}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>208656</th>\n",
+       "      <td>Data Analyst</td>\n",
+       "      <td>Data Analyst</td>\n",
+       "      <td>Anywhere</td>\n",
+       "      <td>via LinkedIn</td>\n",
+       "      <td>Full-time</td>\n",
+       "      <td>True</td>\n",
+       "      <td>New York, United States</td>\n",
+       "      <td>2023-12-06 22:00:28</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Dice</td>\n",
+       "      <td>[sql, python, scala, databricks, aws, spark, t...</td>\n",
+       "      <td>{'cloud': ['databricks', 'aws'], 'libraries': ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       job_title_short                                          job_title  \\\n",
-       "537672    Data Analyst                                       Data Analyst   \n",
-       "436770    Data Analyst                                      Data Analyst-   \n",
-       "774314    Data Analyst  Analyst, Monitoring & Analytics – Default Solu...   \n",
-       "528903    Data Analyst                                       Data Analyst   \n",
-       "475406    Data Analyst                           Elections Data Analyst I   \n",
+       "       job_title_short                                       job_title  \\\n",
+       "766974    Data Analyst                              Data Analyst (Mid)   \n",
+       "221941    Data Analyst                                    Data Analyst   \n",
+       "469286    Data Analyst                                SAS Data Analyst   \n",
+       "539148    Data Analyst  Journeyman  Job Posting Title GIS Data Analyst   \n",
+       "208656    Data Analyst                                    Data Analyst   \n",
        "\n",
-       "          job_location           job_via job_schedule_type  \\\n",
-       "537672    Columbia, SC         via BeBee         Full-time   \n",
-       "436770    San Jose, CA         via BeBee         Full-time   \n",
-       "774314  Lewisville, TX  via TIAA Careers         Full-time   \n",
-       "528903     Concord, NH         via BeBee         Full-time   \n",
-       "475406     Atlanta, GA         via BeBee         Full-time   \n",
+       "            job_location                                         job_via  \\\n",
+       "766974     St. Louis, MO                                        via Dice   \n",
+       "221941        Austin, TX  via Simplex Career Opportunities - HiringThing   \n",
+       "469286        McLean, VA                                        via Dice   \n",
+       "539148  Granite City, IL                           via Ozarks First Jobs   \n",
+       "208656          Anywhere                                    via LinkedIn   \n",
        "\n",
-       "        job_work_from_home            search_location     job_posted_date  \\\n",
-       "537672               False                    Georgia 2023-10-14 20:07:26   \n",
-       "436770               False  California, United States 2023-12-13 16:00:56   \n",
-       "774314               False       Texas, United States 2023-10-05 01:01:51   \n",
-       "528903               False    New York, United States 2023-11-19 11:00:17   \n",
-       "475406               False                    Georgia 2023-08-26 15:00:27   \n",
+       "       job_schedule_type  job_work_from_home          search_location  \\\n",
+       "766974         Full-time               False  Illinois, United States   \n",
+       "221941         Full-time               False     Texas, United States   \n",
+       "469286        Contractor               False  New York, United States   \n",
+       "539148         Full-time               False  Illinois, United States   \n",
+       "208656         Full-time                True  New York, United States   \n",
        "\n",
-       "        job_no_degree_mention  job_health_insurance    job_country  \\\n",
-       "537672                   True                 False  United States   \n",
-       "436770                   True                 False  United States   \n",
-       "774314                  False                 False  United States   \n",
-       "528903                   True                 False  United States   \n",
-       "475406                  False                 False  United States   \n",
+       "           job_posted_date  job_no_degree_mention  job_health_insurance  \\\n",
+       "766974 2023-01-19 01:03:18                  False                 False   \n",
+       "221941 2023-05-02 22:02:17                   True                 False   \n",
+       "469286 2023-04-05 14:00:12                  False                 False   \n",
+       "539148 2023-12-11 19:01:39                  False                 False   \n",
+       "208656 2023-12-06 22:00:28                  False                 False   \n",
        "\n",
-       "       salary_rate  salary_year_avg  salary_hour_avg          company_name  \\\n",
-       "537672         NaN              NaN              NaN              BTS, LLC   \n",
-       "436770         NaN              NaN              NaN               WPP PLC   \n",
-       "774314         NaN              NaN              NaN                  TIAA   \n",
-       "528903         NaN              NaN              NaN             Mindlance   \n",
-       "475406         NaN              NaN              NaN  Team Georgia Careers   \n",
+       "          job_country salary_rate  salary_year_avg  salary_hour_avg  \\\n",
+       "766974  United States         NaN              NaN              NaN   \n",
+       "221941  United States         NaN              NaN              NaN   \n",
+       "469286  United States         NaN              NaN              NaN   \n",
+       "539148  United States         NaN              NaN              NaN   \n",
+       "208656  United States         NaN              NaN              NaN   \n",
+       "\n",
+       "               company_name  \\\n",
+       "766974    Judge Group, Inc.   \n",
+       "221941              Simplex   \n",
+       "469286  Technology Ventures   \n",
+       "539148               LEIDOS   \n",
+       "208656                 Dice   \n",
        "\n",
        "                                               job_skills  \\\n",
-       "537672                                   [r, python, sql]   \n",
-       "436770                         [tableau, power bi, excel]   \n",
-       "774314  [vba, sql, python, excel, sharepoint, tableau,...   \n",
-       "528903                                              [sql]   \n",
-       "475406  [sql, r, python, mysql, oracle, linux, excel, ...   \n",
+       "766974                   [sql, nosql, python, r, tableau]   \n",
+       "221941       [sql, java, t-sql, powershell, mysql, excel]   \n",
+       "469286                  [sas, sas, sql, unix, powerpoint]   \n",
+       "539148                                      [sql, python]   \n",
+       "208656  [sql, python, scala, databricks, aws, spark, t...   \n",
        "\n",
        "                                          job_type_skills  \n",
-       "537672            {'programming': ['r', 'python', 'sql']}  \n",
-       "436770  {'analyst_tools': ['tableau', 'power bi', 'exc...  \n",
-       "774314  {'analyst_tools': ['excel', 'sharepoint', 'tab...  \n",
-       "528903                           {'programming': ['sql']}  \n",
-       "475406  {'analyst_tools': ['excel', 'word', 'tableau',...  "
+       "766974  {'analyst_tools': ['tableau'], 'programming': ...  \n",
+       "221941  {'analyst_tools': ['excel'], 'databases': ['my...  \n",
+       "469286  {'analyst_tools': ['sas', 'powerpoint'], 'os':...  \n",
+       "539148                 {'programming': ['sql', 'python']}  \n",
+       "208656  {'cloud': ['databricks', 'aws'], 'libraries': ...  "
       ]
      },
      "execution_count": 5,
@@ -374,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "cc129be32f728b23",
    "metadata": {
     "ExecuteTime": {
@@ -400,7 +407,7 @@
     "sns.barplot(x='count', y='company_name', data=csv_plot, palette='dark:b_r', hue='company_name')\n",
     "plt.title('Counts of Companies for Data Analyst in the United States')\n",
     "plt.ylabel('')\n",
-    "plt.xlabel('Number of Jobs')\n",
+    "plt.xlabel(\"Number of Jobs\")\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
