--- a/1_EDA_intro.ipynb
+++ b/1_EDA_intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -22,7 +22,8 @@
     "\n",
     "\n",
     "#setup\n",
-    "csv = pd.read_csv(\"/Users/isaacguediri/Desktop/data_jobs.csv\")\n",
+    "dataset = load_dataset('lukebarousse/data_jobs')\n",
+    "csv = dataset['train'].to_pandas()\n",
     "csv[\"job_posted_date\"] = pd.to_datetime(csv[\"job_posted_date\"])\n",
     "csv['job_skills'] = csv['job_skills'].apply(lambda x: ast.literal_eval(x) if pd.notna(x) else x)"
    ]
