--- a/2_Skills_Count.ipynb
+++ b/2_Skills_Count.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3a1f7620",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "de884b98",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c52f28f6",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "2b15a081",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "3e5ecf82",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "66e62480",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "38898896",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "9df19b6b",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "f03ec32d",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "ccecc8b4",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
+   "id": "03ea1127",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>job_title_short</th>\n",
+       "      <th>job_skills</th>\n",
+       "      <th>skill_count</th>\n",
+       "      <th>jobs_total</th>\n",
+       "      <th>skills_percentage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Data Scientist</td>\n",
+       "      <td>python</td>\n",
+       "      <td>42379</td>\n",
+       "      <td>172286</td>\n",
+       "      <td>24.598052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Data Analyst</td>\n",
+       "      <td>sql</td>\n",
+       "      <td>34452</td>\n",
+       "      <td>196075</td>\n",
+       "      <td>17.570827</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Data Scientist</td>\n",
+       "      <td>sql</td>\n",
+       "      <td>30034</td>\n",
+       "      <td>172286</td>\n",
+       "      <td>17.432641</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Data Analyst</td>\n",
+       "      <td>excel</td>\n",
+       "      <td>27519</td>\n",
+       "      <td>196075</td>\n",
+       "      <td>14.034936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Data Scientist</td>\n",
+       "      <td>r</td>\n",
+       "      <td>26022</td>\n",
+       "      <td>172286</td>\n",
+       "      <td>15.103955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>662</th>\n",
+       "      <td>Data Engineer</td>\n",
+       "      <td>fastify</td>\n",
+       "      <td>1</td>\n",
+       "      <td>186241</td>\n",
+       "      <td>0.000537</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>663</th>\n",
+       "      <td>Data Analyst</td>\n",
+       "      <td>capacitor</td>\n",
+       "      <td>1</td>\n",
+       "      <td>196075</td>\n",
+       "      <td>0.000510</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>664</th>\n",
+       "      <td>Data Engineer</td>\n",
+       "      <td>powerbi</td>\n",
+       "      <td>1</td>\n",
+       "      <td>186241</td>\n",
+       "      <td>0.000537</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>665</th>\n",
+       "      <td>Data Analyst</td>\n",
+       "      <td>msaccess</td>\n",
+       "      <td>1</td>\n",
+       "      <td>196075</td>\n",
+       "      <td>0.000510</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>666</th>\n",
+       "      <td>Data Analyst</td>\n",
+       "      <td>ionic</td>\n",
+       "      <td>1</td>\n",
+       "      <td>196075</td>\n",
+       "      <td>0.000510</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>667 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    job_title_short job_skills  skill_count  jobs_total  skills_percentage\n",
+       "0    Data Scientist     python        42379      172286          24.598052\n",
+       "1      Data Analyst        sql        34452      196075          17.570827\n",
+       "2    Data Scientist        sql        30034      172286          17.432641\n",
+       "3      Data Analyst      excel        27519      196075          14.034936\n",
+       "4    Data Scientist          r        26022      172286          15.103955\n",
+       "..              ...        ...          ...         ...                ...\n",
+       "662   Data Engineer    fastify            1      186241           0.000537\n",
+       "663    Data Analyst  capacitor            1      196075           0.000510\n",
+       "664   Data Engineer    powerbi            1      186241           0.000537\n",
+       "665    Data Analyst   msaccess            1      196075           0.000510\n",
+       "666    Data Analyst      ionic            1      196075           0.000510\n",
+       "\n",
+       "[667 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_skills_perc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "feae2925",
    "metadata": {},
    "outputs": [
